--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html lang="he">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>מערכת ניהול התרמות</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>ברוכים הבאים למערכת ניהול ההתרמות</h1>
+        <nav>
+            <a href="dashboard.html">ניהול תרומות</a>
+            <a href="settings.html">שינוי עיצוב</a>
+            <a href="login.html">התחברות</a>
+        </nav>
+    </header>
+    <main>
+        <p>מערכת זו מאפשרת לך לעקוב ולנהל התחייבויות תרומה בזמן אמת.</p>
+        <p>בחר מוסד והתאם את ההגדרות שלך.</p>
+    </main>
+</body>
+</html>
